<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bolim"
            android:icon="@drawable/menuuchun"
            android:title="@string/bo_limlar" />

        <item
            android:id="@+id/nav_boglanish"
            android:icon="@drawable/mail"
            android:title="@string/bog_lanish" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/dastur_haqida" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="Tools" />

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
